k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jikji-homepage
  namespace: homepage-jikji-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jikji-homepage
  template:
    metadata:
      labels:
        app: jikji-homepage
    spec:
      containers:
      - name: jikji-homepage
        image: ghcr.io/n3n-dev/jikji-homepage:latest
        ports:
        - containerPort: 3000
