k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jikji-homepage-svc
  namespace: homepage-jikji-ai
spec:
  selector:
    app: jikji-homepage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
