k8s/combined-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jikji-ai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jikji-ai
  namespace: jikji-ai
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: jikji-ai
  template:
    metadata:
      labels:
        app: jikji-ai
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: jikji-ai
          image: ghcr.io/n3n-dev/jikji-ai:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jikji-ai-svc
  namespace: jikji-ai
spec:
  selector:
    app: jikji-ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jikji-ai-ingress
  namespace: jikji-ai
spec:
  ingressClassName: traefik
  rules:
    - host: jikji-ai-prod.prod.nthreen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jikji-ai-svc
                port:
                  number: 80
