k8s/combined.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jikji-ai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jikji-ai-dev
  namespace: jikji-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jikji-ai-dev
  template:
    metadata:
      labels:
        app: jikji-ai-dev
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: jikji-ai-dev
          image: ghcr.io/n3n-dev/jikji-ai:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jikji-ai-dev-svc
  namespace: jikji-ai
spec:
  selector:
    app: jikji-ai-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jikji-ai-dev-ingress
  namespace: jikji-ai
spec:
  ingressClassName: traefik
  rules:
    - host: jikji-ai-dev.d2.nthreen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jikji-ai-dev-svc
                port:
                  number: 80
