k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jikji-homepage-ingress
  namespace: homepage-jikji-ai
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jikji.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jikji-homepage-svc
            port:
              number: 80
